fix(network): enable autoResize in network settings

--- a/www/network.html
+++ b/www/network.html
@@ -47,7 +47,7 @@
                         enabled: false,
                     }
                 },
-                autoResize: false,
+                autoResize: true,
                 locale: navigator.language.toLowerCase().split('-').slice(0, 2).join('-'),
             };
             const container = document.getElementById('network');
