--- a/www/editor.html
+++ b/www/editor.html
@@ -46,6 +46,7 @@
         r = await fetch('api/config', {method: 'POST', body: editor.getValue()});
         if (r.ok) {
             alert('OK');
+            dump = editor.getValue();
             await fetch('api/restart', {method: 'POST'});
         } else {
             alert(await r.text());
