Update title for all WebUI pages

--- a/www/config.html
+++ b/www/config.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>go2rtc - Config</title>
+    <title>config - go2rtc</title>
     <script src="https://unpkg.com/ace-builds@1.33.1/src-min/ace.js"></script>
     <style>
         html, body, #config {
