--- a/www/log.html
+++ b/www/log.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>go2rtc - Logs</title>
+    <title>log - go2rtc</title>
     <style>
         main > div {
             display: flex;
