--- a/www/add.html
+++ b/www/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>go2rtc - Add Stream</title>
+    <title>add - go2rtc</title>
     <style>
         main > button {
             background-color: #444;
