--- a/www/codecs.html
+++ b/www/codecs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>go2rtc - WebRTC</title>
+    <title>codecs - go2rtc</title>
     <style>
         body {
             margin: 0;
