--- a/www/links.html
+++ b/www/links.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>go2rtc - links</title>
+    <title>links - go2rtc</title>
     <style>
         div > li {
             list-style-type: none;
