--- a/www/stream.html
+++ b/www/stream.html
@@ -5,7 +5,7 @@
     <link rel="apple-touch-icon" href="https://alexxit.github.io/go2rtc/icons/apple-touch-icon-180x180.png" sizes="180x180">
     <link rel="icon" href="https://alexxit.github.io/go2rtc/icons/favicon.ico">
     <link rel="manifest" href="https://alexxit.github.io/go2rtc/manifest.json">
-    <title>go2rtc - Stream</title>
+    <title>stream - go2rtc</title>
     <style>
         body {
             background: black;
