--- a/www/webrtc.html
+++ b/www/webrtc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>go2rtc - WebRTC</title>
+    <title>webrtc - go2rtc</title>
     <style>
         body {
             background-color: black;
