--- a/www/log.html
+++ b/www/log.html
@@ -15,25 +15,17 @@
             font-size: 13px;
         }
 
-        .trace {
-            color: #585858 !important;
-        }
+        .trace { color: #585858 !important; }
+        .debug { color: #808080 !important; }
+        .info { color: #0174DF !important; }
+        .warn { color: #FF9966 !important; }
+        .error { color: #DF0101 !important; }
 
-        .debug {
-            color: #808080 !important;
-        }
-
-        .info {
-            color: #0174DF !important;
-        }
-
-        .warn {
-            color: #FF9966 !important;
-        }
-
-        .error {
-            color: #DF0101 !important;
-        }
+        html.dark .trace { color: #a0a0a0 !important; }
+        html.dark .debug { color: #c0c0c0 !important; }
+        html.dark .info { color: #64b5f6 !important; }
+        html.dark .warn { color: #ffb74d !important; }
+        html.dark .error { color: #e57373 !important; }
     </style>
 </head>
 <body>
