--- a/www/webrtc-sync.html
+++ b/www/webrtc-sync.html
@@ -21,7 +21,7 @@
 <script>
     async function PeerConnection(media) {
         const pc = new RTCPeerConnection({
-            iceServers: [{urls: 'stun:stun.l.google.com:19302'}]
+            iceServers: [{urls: ['stun:stun.cloudflare.com:3478', 'stun:stun.l.google.com:19302']}]
         });
 
         document.getElementById('video').srcObject = new MediaStream([
